--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
+# Core Flask dependencies
 Flask==2.3.3
 Flask-CORS==4.0.0
 Werkzeug==2.3.7
+
+# Production WSGI server
+gunicorn==21.2.0
+
+# Rate limiting and security
+Flask-Limiter==3.5.0
+redis==5.0.1
+
+# Monitoring and logging
+prometheus-client==0.19.0
+structlog==23.2.0
+
+# Security
+cryptography==41.0.7
+bcrypt==4.1.2
+
+# Environment management
+python-dotenv==1.0.0
+
+# Production utilities
+psutil==5.9.6
